--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="" />
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
 
-  <title>Reflux HTML CSS Template</title>
+  <title>Tibo Eycken - Personal CV</title>
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -32,13 +32,13 @@
           </div>
           <div class="author-content">
             <h4>Tibo Eycken</h4>
-            <span>Student Applied Computer Science</span>
+            <span>Student System & Network Administration</span>
           </div>
           <nav class="main-nav" role="navigation">
             <ul class="main-menu">
               <li><a href="#section1">About Me</a></li>
               <li><a href="#section2">What I’m good at</a></li>
-              <li><a href="#section3">My Experiences</a></li>
+              <li><a href="#section3">Projects & Experiences</a></li>
             </ul>
           </nav>
           <div class="social-network">
@@ -47,7 +47,7 @@
                 <a href="https://www.linkedin.com/in/tibo-eycken-b81aaa1a3"><i class="fa fa-linkedin"></i></a>
               </li>
               <li>
-                <a href="https://gitlab.com/tibo.eycken1"><i class="fa fa-github"></i></a>
+                <a href="https://github.com/tiboeycken"><i class="fa fa-github"></i></a>
               </li>
             </ul>
           </div>
@@ -60,8 +60,8 @@
         <div class="section-heading">
           <h2>About Me</h2>
           <div class="line-dec"></div>
-          <span>This is a Bootstrap v4.2.1 CSS Template for you. Edit and use
-            this layout for your site. Updated on 21 May 2019 for repeated main menu HTML code.</span>
+          <span>Passionate student in System & Network Administration with a strong focus on cloud infrastructure,
+            cybersecurity, and IT operations.</span>
         </div>
         <div class="left-image-post">
           <div class="row">
@@ -72,16 +72,16 @@
             </div>
             <div class="col-md-6">
               <div class="right-text">
-                <h4>Reflux HTML CSS Template</h4>
+                <h4>My Journey in IT Infrastructure</h4>
                 <p>
-                  Donec tristique feugiat lacus, at sollicitudin nunc euismod
-                  sed. Mauris viverra, erat non sagittis gravida, elit dui
-                  mollis ante, sit amet eleifend purus ligula eget eros. Sed
-                  tincidunt quam vitae neque pharetra dignissim eget ut
-                  libero.
+                  I am a dedicated student at Karel de Grote Hogeschool in Antwerp, pursuing System & Network
+                  Administration.
+                  My passion lies in cloud infrastructure, cybersecurity, and IT operations. I love learning new things
+                  and see myself
+                  as a realistic but optimistic person who always shoots for the stars.
                 </p>
                 <div class="white-button">
-                  <a href="#">Read More</a>
+                  <a href="#section2">View My Skills</a>
                 </div>
               </div>
             </div>
@@ -91,16 +91,16 @@
           <div class="row">
             <div class="col-md-6">
               <div class="left-text">
-                <h4>Sed sagittis rhoncus velit</h4>
+                <h4>Career Goals & Interests</h4>
                 <p>
-                  Pellentesque habitant morbi tristique senectus et netus et
-                  malesuada fames ac turpis egestas. Vestibulum fermentum
-                  eleifend nibh, vitae sodales elit finibus pretium.
-                  Suspendisse potenti. Ut sollicitudin risus a sollicitudin
-                  semper.
+                  I aspire to work in cloud infrastructure, system administration, or cybersecurity within the IT and
+                  consultancy sector.
+                  I'm particularly interested in cloud technologies and security. I enjoy traveling, especially to
+                  Norway (visited almost 10 times in 3 years),
+                  camping, and hiking. I'm a Google Cloud Certified Associate Cloud Engineer since July 2025.
                 </p>
                 <div class="white-button">
-                  <a href="#">Read More</a>
+                  <a href="#section3">View My Work</a>
                 </div>
               </div>
             </div>
@@ -127,44 +127,44 @@
           <div class="col-md-6">
             <div class="service-item">
               <div class="first-service-icon service-icon"></div>
-              <h4>HTML5 &amp; CSS3</h4>
+              <h4>System Administration</h4>
               <p>
-                Phasellus non convallis dolor. Integer tempor hendrerit arcu
-                at bibendum. Sed ac ante non metus vehicula congue quis eget
-                eros.
+                Proficient in bash, PowerShell, and system administration tools. Strong understanding of IT
+                infrastructure,
+                network management, and system security. Experience with both Windows and Linux environments.
               </p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service-item">
               <div class="second-service-icon service-icon"></div>
-              <h4>Creative Ideas</h4>
+              <h4>Cloud Infrastructure</h4>
               <p>
-                Proin lacus massa, eleifend sed fermentum in, dignissim vel
-                metus. Nunc accumsan leo nec felis porttitor, ultricies
-                faucibus purus mollis.
+                Google Cloud Certified Associate Cloud Engineer with hands-on experience in CI/CD automation,
+                load balancing, managed instance groups, and cloud storage. Experience with Redis caching,
+                Cloud SQL, and VPC networking.
               </p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service-item">
               <div class="third-service-icon service-icon"></div>
-              <h4>Easy Customize</h4>
+              <h4>Programming & Databases</h4>
               <p>
-                Integer suscipit condimentum aliquet. Nam quis risus metus.
-                Nullam faucibus quam eget arcu pretium tincidunt. Nam libero
-                dui.
+                Experience with Java, .NET, C, C#, and SQL. Knowledge of PostgreSQL and NeoDB.
+                Understanding of database management and data modeling. Experience with both
+                relational and graph databases.
               </p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="service-item">
               <div class="fourth-service-icon service-icon"></div>
-              <h4>Admin Dashboard</h4>
+              <h4>Cybersecurity & Monitoring</h4>
               <p>
-                Vivamus et dui a massa venenatis fringilla. Proin lacus massa,
-                eleifend sed fermentum in, dignissim vel metus. Nunc accumsan
-                leo nec felis porttitor.
+                Strong interest in cybersecurity and IT security practices. Experience with health checks,
+                monitoring systems, and firewall configuration. Knowledge of backup and restore processes
+                and security best practices for cloud environments.
               </p>
             </div>
           </div>
@@ -175,93 +175,92 @@
     <section class="section my-work" data-section="section3">
       <div class="container">
         <div class="section-heading">
-          <h2>My Work</h2>
+          <h2>Projects & Experiences</h2>
           <div class="line-dec"></div>
-          <span>Aenean sollicitudin ex mauris, lobortis lobortis diam euismod sit
-            amet. Duis ac elit vulputate, lobortis arcu quis, vehicula
-            mauris.</span>
+          <span>Here are some of my academic projects and experiences that showcase my technical skills and
+            problem-solving abilities.</span>
         </div>
         <div class="row">
           <div class="isotope-wrapper">
             <form class="isotope-toolbar">
               <label><input type="radio" data-type="*" checked="" name="isotope-filter" />
                 <span>all</span></label>
-              <label><input type="radio" data-type="people" name="isotope-filter" />
-                <span>people</span></label>
-              <label><input type="radio" data-type="nature" name="isotope-filter" />
-                <span>nature</span></label>
-              <label><input type="radio" data-type="animals" name="isotope-filter" />
-                <span>animals</span></label>
+              <label><input type="radio" data-type="cloud" name="isotope-filter" />
+                <span>cloud</span></label>
+              <label><input type="radio" data-type="infrastructure" name="isotope-filter" />
+                <span>infrastructure</span></label>
+              <label><input type="radio" data-type="academic" name="isotope-filter" />
+                <span>academic</span></label>
             </form>
             <div class="isotope-box">
-              <div class="isotope-item" data-type="nature">
+              <div class="isotope-item" data-type="cloud">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-01.jpg" alt="sq-sample26" />
+                  <img src="assets/images/portfolio-01.jpg" alt="Cloud Infrastructure Project" />
                   <figcaption>
-                    <a href="assets/images/portfolio-01.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>First Title</h4>
-                    <span>free to use our template</span>
+                    <a href="assets/images/portfolio-01.jpg" data-lightbox="image-1"
+                      data-title="Enterprise Cloud Infrastructure"><i class="fa fa-search"></i></a>
+                    <h4>Enterprise Cloud Infrastructure</h4>
+                    <span>Google Cloud, CI/CD, Load Balancing, Redis</span>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="people">
+              <div class="isotope-item" data-type="infrastructure">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-02.jpg" alt="sq-sample26" />
+                  <img src="assets/images/portfolio-02.jpg" alt="System Administration" />
                   <figcaption>
-                    <a href="assets/images/portfolio-02.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Second Title</h4>
-                    <span>please tell your friends</span>
+                    <a href="assets/images/portfolio-02.jpg" data-lightbox="image-1"
+                      data-title="System Administration & Networking"><i class="fa fa-search"></i></a>
+                    <h4>System Administration</h4>
+                    <span>Bash, PowerShell, Network Management</span>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="animals">
+              <div class="isotope-item" data-type="cloud">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-03.jpg" alt="sq-sample26" />
+                  <img src="assets/images/portfolio-03.jpg" alt="Database Management" />
                   <figcaption>
-                    <a href="assets/images/portfolio-03.jpg" data-lightbox="image-1" data-title="Caption"><i
+                    <a href="assets/images/portfolio-03.jpg" data-lightbox="image-1" data-title="Database Management"><i
                         class="fa fa-search"></i></a>
-                    <h4>Item Third</h4>
-                    <span>customize anything</span>
+                    <h4>Database Management</h4>
+                    <span>PostgreSQL, NeoDB, SQL, Data Modeling</span>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="people">
+              <div class="isotope-item" data-type="infrastructure">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-04.jpg" alt="sq-sample26" />
+                  <img src="assets/images/portfolio-04.jpg" alt="Security & Monitoring" />
                   <figcaption>
-                    <a href="assets/images/portfolio-04.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Item Fourth</h4>
-                    <span>Re-distribution not allowed</span>
+                    <a href="assets/images/portfolio-04.jpg" data-lightbox="image-1"
+                      data-title="Security & Monitoring Systems"><i class="fa fa-search"></i></a>
+                    <h4>Security & Monitoring</h4>
+                    <span>Firewall Configuration, Health Checks, Backup</span>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="nature">
+              <div class="isotope-item" data-type="academic">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-05.jpg" alt="sq-sample26" />
+                  <img src="assets/images/portfolio-05.jpg" alt="Academic Project" />
                   <figcaption>
-                    <a href="assets/images/portfolio-05.jpg" data-lightbox="image-1" data-title="Caption"><i
+                    <a href="assets/images/portfolio-05.jpg" data-lightbox="image-1" data-title="Academic Excellence"><i
                         class="fa fa-search"></i></a>
-                    <h4>Fifth Awesome</h4>
-                    <span>Ut sollicitudin risus</span>
+                    <h4>Top 4 Academic Project</h4>
+                    <span>Selected from 27 teams, presented to real company</span>
                   </figcaption>
                 </figure>
               </div>
 
-              <div class="isotope-item" data-type="animals">
+              <div class="isotope-item" data-type="cloud">
                 <figure class="snip1321">
-                  <img src="assets/images/portfolio-06.jpg" alt="sq-sample26" />
+                  <img src="assets/images/portfolio-06.jpg" alt="Google Cloud Certification" />
                   <figcaption>
-                    <a href="assets/images/portfolio-06.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Awesome Sixth</h4>
-                    <span>Donec eget massa ante</span>
+                    <a href="assets/images/portfolio-06.jpg" data-lightbox="image-1"
+                      data-title="Google Cloud Certified"><i class="fa fa-search"></i></a>
+                    <h4>Google Cloud Certification</h4>
+                    <span>Associate Cloud Engineer, July 2025</span>
                   </figcaption>
                 </figure>
               </div>
