--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -26,10 +26,10 @@
       <h2>About This Website</h2>
       <div class="about">
         <div class="about-text">
-          <p>Hey there! I wanted to do something a little different with this portfolio — though not <em>too</em>
+          <p>Hey there! I wanted to do something a little different with this portfolio. Though not <em>too</em>
             different, because let’s be honest, you’ve probably seen your fair share of sites like this.</p>
 
-          <p>But here’s where it stands out: I didn’t just build this site — I automated its whole deployment. One
+          <p>But here’s where it stands out: I didn’t just build this site. I automated its whole deployment. One
             script sets up a Google Cloud environment, links it to a GitHub repo, and configures everything to
             auto-deploy to Cloud Run on every push. It scales to zero when idle, updates itself, and stays friendly to
             my wallet. If you're curious, the code’s on my <a href="https://github.com/tiboeycken" target="_blank"
@@ -55,7 +55,7 @@
         <div class="about-text">
           <p>
             I think it's best if I start off by introducing myself. My name is Tibo Eycken and I am a <span
-              id="age"></span> year old living in Antwerp.
+              id="age"></span>-year-old living in Antwerp.
           </p>
           <p>
             I am currently studying Applied Computer Science at Karel de Grote Hogeschool with a focus on System and
@@ -64,7 +64,7 @@
           </p>
           <p>
             When I’m not sitting behind a desk, I like taking my dog for walks, spending time with friends, and visiting
-            family in Norway — something I try to do at least once a year. I’m a big fan of the country and am even
+            family in Norway (something I try to do at least once a year). I’m a big fan of the country and am even
             learning a
             bit of the language myself.
           </p>
@@ -73,9 +73,11 @@
           </p>
         </div>
         <div class="about-image-slider">
-          <button class="nav-btn" id="prevBtn" aria-label="Previous Image">&#8592;</button>
-          <img id="aboutImage" src="./assets/images/Norway/IMG_1655.jpg" alt="Lake" />
-          <button class="nav-btn" id="nextBtn" aria-label="Next Image">&#8594;</button>
+          <div class="about-image-slider">
+            <button class="nav-btn" id="prevBtn" aria-label="Previous Image">&#8592;</button>
+            <img id="aboutImage" src="./assets/images/Norway/IMG_1655.jpg" alt="Lake" />
+            <button class="nav-btn" id="nextBtn" aria-label="Next Image">&#8594;</button>
+          </div>
         </div>
       </div>
     </section>
@@ -86,8 +88,9 @@
     <section id="skills">
       <h2>Skills</h2>
       <div class="section-intro">
-        <p>A mix of things I’ve learned through coursework, hands-on projects, and curiosity. Some technical, some human
-          — all useful.</p>
+        <p>A mix of things I’ve learned through coursework, hands-on projects, and curiosity. Some technical, some
+          human -
+          all useful.</p>
       </div>
       <div class="skills">
         <div class="skill-card">
@@ -107,13 +110,13 @@
         </div>
         <div class="skill-card">
           <i class="fas fa-toolbox"></i>
-          <h3>Extra's</h3>
+          <h3>Extras</h3>
           <p>Git, Docker, GitLab, Networking, Pub/Sub</p>
         </div>
         <div class="skill-card">
           <i class="fas fa-comments"></i>
           <h3>Communication</h3>
-          <p>Strong communicator, team player — and never afraid to ask the “dumb” questions</p>
+          <p>Strong communicator, team player and never afraid to ask the “silly" questions</p>
         </div>
       </div>
     </section>
@@ -121,15 +124,14 @@
     <section id="certificates">
       <h2>Certificates</h2>
       <div class="section-intro">
-        <p>Proof that I’ve been putting in the work. These certifications back up the cloud, networking, and security
-          skills I’ve been sharpening.</p>
+        <p>I’m learning by doing and this section tracks the certs I’ve earned (and the ones still to come).</p>
 
       </div>
       <div class="skills">
         <div class="skill-card">
           <i class="fas fa-certificate"></i>
           <h3>Associate Cloud Engineer</h3>
-          <p>I got my first Certification with Google and am now a Certified Associate Cloud Engineer! - Verify via <a
+          <p>I got my first Certification with Google and am now a Certified Associate Cloud Engineer! Verify via <a
               href="https://www.credly.com/badges/bd2fcb68-74c1-4722-8644-b04951654d2a/public_url" target="_blank"
               style="color: var(--accent); font-weight: bold;">Credly</a>.</p>
         </div>
@@ -145,7 +147,7 @@
     <section id="projects">
       <h2>Projects</h2>
       <div class="section-intro">
-        <p>Here are a few things I’ve built — for school, for fun, and to learn. You can find them all (and probably a
+        <p>Here are a few things I’ve built for school, for fun, and to learn. You can find them all (and probably a
           few broken experiments) on my <a href="https://github.com/tiboeycken" target="_blank"
             style="color: var(--accent); font-weight: bold;">GitHub</a>.</p>
       </div>
