Chore: changed architecture for testing firebase some more

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tibo Eycken - CV</title>
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400|Inter:400,700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="./assets/css/styles.css">
@@ -101,7 +102,7 @@
         <div class="skill-card">
           <i class="fas fa-cloud"></i>
           <h3>Cloud Infrastructure</h3>
-          <p>Google Cloud Certified. CI/CD automation, Kubernetes, Cloud Storage, Identity & Access Management.</p>
+          <p>Google Cloud Certified. CI/CD automation, Kubernetes, Cloud Storage, IAM & (a bit of) Terraform.</p>
         </div>
         <div class="skill-card">
           <i class="fas fa-code"></i>
@@ -160,7 +161,7 @@
               <div class="project-card-body">
                 <h4>Enterprise Cloud Infrastructure</h4>
                 <span>Bash, Google Cloud, Redis, CI/CD, School</span>
-                <div class="flip-arrow">More</div>
+                <div class="flip-arrow">Flip</div>
               </div>
             </div>
             <div class="project-card-back">
@@ -168,7 +169,7 @@
                 caching, and a lot more.</p>
               <a href="https://github.com/tiboeycken" target="_blank" style="color: var(--accent)"><i
                   class="fab fa-github"></i></a>
-              <div class="flip-arrow">Less </div>
+              <div class="flip-arrow">Flip </div>
             </div>
           </div>
         </div>
@@ -179,8 +180,8 @@
               <img src="./assets/images/servers.jpg" alt="Database Project" />
               <div class="project-card-body">
                 <h4>Automated Cloud Run env</h4>
-                <span>Bash, Google Cloud, Automation, Personal</span>
-                <div class="flip-arrow">More</div>
+                <span>Bash, PowerShell, Terraform Google Cloud</span>
+                <div class="flip-arrow">Flip</div>
               </div>
             </div>
             <div class="project-card-back">
@@ -188,7 +189,7 @@
                 command.</p>
               <a href="https://github.com/tiboeycken" target="_blank" style="color: var(--accent)"><i
                   class="fab fa-github"></i></a>
-              <div class="flip-arrow">Less</div>
+              <div class="flip-arrow">Flip</div>
             </div>
           </div>
         </div>
@@ -200,7 +201,7 @@
               <div class="project-card-body">
                 <h4>Big Data Graphs</h4>
                 <span>Neo4j, Python, NoSQL, Datawarehousing, School</span>
-                <div class="flip-arrow">More</div>
+                <div class="flip-arrow">Flip</div>
               </div>
             </div>
             <div class="project-card-back">
@@ -208,7 +209,7 @@
                 datasets.</p>
               <a href="https://github.com/tiboeycken" target="_blank" style="color: var(--accent)"><i
                   class="fab fa-github"></i></a>
-              <div class="flip-arrow">Less</div>
+              <div class="flip-arrow">Flip</div>
             </div>
           </div>
         </div>
