Chore: changed some pictures and updated github links

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -157,7 +157,7 @@
         <div class="project-card-wrapper" onclick="this.classList.toggle('flipped')">
           <div class="project-card-inner">
             <div class="project-card-front">
-              <img src="./assets/images/board.jpg" alt="Cloud Project" />
+              <img src="./assets/images/infrastructure.jpeg" alt="Cloud Project" />
               <div class="project-card-body">
                 <h4>Enterprise Cloud Infrastructure</h4>
                 <span>Bash, Google Cloud, Redis, CI/CD, School</span>
@@ -167,7 +167,7 @@
             <div class="project-card-back">
               <p>Set up a fully automated Google Cloud environment, including load balancing, CI/CD pipelines, Redis
                 caching, and a lot more.</p>
-              <a href="https://github.com/tiboeycken" target="_blank" style="color: var(--accent)"><i
+              <a href="https://github.com/tiboeycken/integratieproject_1" target="_blank" style="color: var(--accent)"><i
                   class="fab fa-github"></i></a>
               <div class="flip-arrow">Flip </div>
             </div>
@@ -177,7 +177,7 @@
         <div class="project-card-wrapper" onclick="this.classList.toggle('flipped')">
           <div class="project-card-inner">
             <div class="project-card-front">
-              <img src="./assets/images/servers.jpg" alt="Database Project" />
+              <img src="./assets/images/cloud.jpg" alt="Database Project" />
               <div class="project-card-body">
                 <h4>Automated Cloud Run env</h4>
                 <span>Bash, PowerShell, Terraform Google Cloud</span>
@@ -187,7 +187,7 @@
             <div class="project-card-back">
               <p>A handy script I created that fully automates deployment of simple applications to Cloud Run with one
                 command.</p>
-              <a href="https://github.com/tiboeycken" target="_blank" style="color: var(--accent)"><i
+              <a href="https://github.com/tiboeycken/personal_website" target="_blank" style="color: var(--accent)"><i
                   class="fab fa-github"></i></a>
               <div class="flip-arrow">Flip</div>
             </div>
@@ -197,7 +197,7 @@
         <div class="project-card-wrapper" onclick="this.classList.toggle('flipped')">
           <div class="project-card-inner">
             <div class="project-card-front">
-              <img src="./assets/images/student.jpg" alt="Admin Project" />
+              <img src="./assets/images/bigdata.jpeg" alt="Admin Project" />
               <div class="project-card-body">
                 <h4>Big Data Graphs</h4>
                 <span>Neo4j, Python, NoSQL, Datawarehousing, School</span>
@@ -207,7 +207,7 @@
             <div class="project-card-back">
               <p>In this project, we learned how to create and work with Neo4j graph databases to analyze large
                 datasets.</p>
-              <a href="https://github.com/tiboeycken" target="_blank" style="color: var(--accent)"><i
+              <a href="https://github.com/tiboeycken/databanken_2" target="_blank" style="color: var(--accent)"><i
                   class="fab fa-github"></i></a>
               <div class="flip-arrow">Flip</div>
             </div>
